--- a/mock.html
+++ b/mock.html
@@ -3,9 +3,10 @@
   <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>Robotics Homepage</title>
+	<title>Mock Page</title>
   </head>
   <body>
+	  <header>Munchkin</header>
   </body>
 </html>
 
