--- a/mock.html
+++ b/mock.html
@@ -9,7 +9,9 @@
   <body>
 	  <h1>Munchkin</h1>
 	  <button class="homepage">R</button>
-	<footer>&#169; Olivia</footer>
+	<footer>
+		<p class="copyright">&#169; Olivia</p>
+	</footer>
   </body>
 </html>
 
