--- a/mock.html
+++ b/mock.html
@@ -7,8 +7,11 @@
 	<title>Mock Page</title>
   </head>
   <body>
-	  <button class="homepage">R</button>
-	  <h1>Munchkin</h1>
+	  <div class="div1">
+		  <button class="homepage">R</button>
+		  <h1>Munchkin</h1>
+	  </div>
+	  
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
 	</footer>
