--- a/mock.html
+++ b/mock.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 	  <div class="div1">
-		  <button class="homepage">R</button>
+		  <button class="homepage" onclick="location.href='mock.html'">R</button>
 		  <h1>Munchkin</h1>
 	  </div>
 	  
