--- a/mock.html
+++ b/mock.html
@@ -11,7 +11,8 @@
 		  <button class="homepage" onclick="location.href='mock.html'">R</button>
 		  <h1>Munchkin</h1>
 	  </div>
-	  
+	  <div class="logoone"></div>
+	  <div class="logotwo"></div>
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
 	</footer>
