--- a/mock.html
+++ b/mock.html
@@ -8,8 +8,10 @@
   </head>
   <body>
 	  <div class="div1">
-		  <button class="homepage" onclick="location.href='mock.html'">R</button>
-		  <h1>Munchkin</h1>
+		  <div class="homediv">
+		  	<button class="homepage" onclick="location.href='mock.html'">R</button>
+		  	<h1>Munchkin</h1>
+		  </div>
 		  <div class="logoone"></div>
 		  <div class="logotwo"></div>
 	  </div>
