--- a/mock.html
+++ b/mock.html
@@ -10,7 +10,7 @@
 	  <div class="div1">
 		  <button class="homepage" onclick="location.href='mock.html'">R</button>
 		  <h1>Munchkin</h1>
-		  <div class="logoone"></div>
+		  <div class="logone"></div>
 		  <div class="logotwo"></div>
 	  </div>
 	<footer>
