--- a/mock.html
+++ b/mock.html
@@ -10,7 +10,9 @@
 	  <div class="div1">
 		  <button class="homepage" onclick="location.href='homepage.html'">R</button>
 		  <h1>Munchkin</h1>
+		<div>
 		  <div class="logone"></div>
+		</div>
 		  <div class="logotwo"></div>
 	  </div>
 	<footer>
