--- a/mock.html
+++ b/mock.html
@@ -8,10 +8,15 @@
   </head>
   <body>
 	  <div class="div1">
-		  <div class="logone"></div>
+		  <div class="blueone">
+			  <div class="logone">  
+		  </div>
 		  <button class="homepage" onclick="location.href='homepage.html'">R</button>
 		  <h1>Munchkin</h1>
-		  <div class="logotwo"></div>
+		  <div class="bluetwo">
+			  <div class="logotwo"></div>
+		  </div>
+		  
 	   </div>
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
