--- a/mock.html
+++ b/mock.html
@@ -13,6 +13,7 @@
 		  </div>
 		  <button class="homepage" onclick="location.href='homepage.html'">R</button>
 		  <h1>Munchkin</h1>
+			  <p>Olivia Inc.</p>
 		  <div class="bluetwo">
 			  <div class="logotwo"></div>
 		  </div>
