--- a/mock.html
+++ b/mock.html
@@ -7,17 +7,13 @@
 	<title>Mock Page</title>
   </head>
   <body>
+	  <div class="logone">
 	  <div class="div1">
-		  <div class="blueone">
-			  <div class="logone">  
-		  </div>
 		  <button class="homepage" onclick="location.href='homepage.html'">R</button>
 		  <h1>Munchkin</h1>
 			  <p>Olivia Inc.</p>
-		  <div class="bluetwo">
-			  <div class="logotwo"></div>
-		  </div>
 	   </div>
+	   <div class="logtwo">
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
 	</footer>
