--- a/mock.html
+++ b/mock.html
@@ -7,16 +7,19 @@
 	<title>Mock Page</title>
   </head>
   <body>
-	  <div class="logone">
 	  <div class="div1">
-		  <button class="homepage" onclick="location.href='homepage.html'">R</button>
-		  <h1>Munchkin</h1>
-			  <p>Olivia Inc.</p>
+      <div class="logo-one"></div>
+      <div class="logo-two"></div>
+      <a href="homepage.html">
+        <h1>
+          <span class="homepage-r" >R</span>
+          <span class="homepage-m" >Munchkin</span>
+          <span class="homepage-o" >Olivia Inc.</span>
+        </h1>
+      </a>
 	   </div>
-	   <div class="logtwo">
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
 	</footer>
   </body>
 </html>
-
