--- a/mock.html
+++ b/mock.html
@@ -17,7 +17,14 @@
           <span class="homepage-o" >Olivia Inc.</span>
         </h1>
       </a>
-	   </div>
+      <div class="search-bar">
+        <a href="about-us.html" id="about-us">ABOUT US</a>
+        <a href="specs.html" id="specs">SPECS</a>
+        <a href="features.html" id="features">FEATURES</a>
+        <a href="munchkin.html" id="munchkin">MUNCHKIN</a>
+      </div>
+	  </div>
+    <a href="homepage.html" id="r-button">R</a>
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
 	</footer>
