--- a/mock.html
+++ b/mock.html
@@ -22,6 +22,7 @@
         <a href="specs.html" id="specs">SPECS</a>
         <a href="features.html" id="features">FEATURES</a>
         <a href="munchkin.html" id="munchkin">MUNCHKIN</a>
+	<a href="form.html" id="price-inquiry">PRICE INQUIRY</a>
       </div>
 	  </div>
     <a href="homepage.html" id="r-button">R</a>
