--- a/homepage.html
+++ b/homepage.html
@@ -1,1 +1,33 @@
-
+<!doctype html>
+<html lang="en-US">
+  <head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width" />
+	<link rel="stylesheet" href="mockstyles.css">
+	<title>Mock Page</title>
+  </head>
+  <body>
+	  <div class="div1">
+      <div class="logo-one"></div>
+      <div class="logo-two"></div>
+      <a href="homepage.html">
+        <h1>
+          <span class="homepage-r" >R</span>
+          <span class="homepage-m" >Munchkin</span>
+          <span class="homepage-o" >Olivia Inc.</span>
+        </h1>
+      </a>
+      <div class="search-bar">
+        <a href="about-us.html" id="about-us">ABOUT US</a>
+        <a href="specs.html" id="specs">SPECS</a>
+        <a href="features.html" id="features">FEATURES</a>
+        <a href="munchkin.html" id="munchkin">MUNCHKIN</a>
+	<a href="form.html" id="price-inquiry">PRICE INQUIRY</a>
+      </div>
+	  </div>
+    <a href="homepage.html" id="r-button">R</a>
+	<footer>
+		<p class="copyright">&#169; Olivia</p>
+	</footer>
+  </body>
+</html>
