--- a/mock.html
+++ b/mock.html
@@ -26,6 +26,7 @@
       </div>
 	  </div>
     <a href="homepage.html" id="r-button">R</a>
+    <a href="homepage.html" id="homepage-r-small">R</a>
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
 	</footer>
