--- a/features.html
+++ b/features.html
@@ -1,14 +1,14 @@
   <title>Munchkin's Features</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="formstyle" href="formstyle.css">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="features.html" class="active">Features</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="brain.jpeg">The Brain</a></li>
+        <li><a href="motor2.jpeg">One of Munchkins Motors</a></li>
+        <li><a href="munchkin_claw.jpeg">The Claw</a></li>
+        <li><a href="munchkin.jpeg">The Product</a></li>
       </ul>
     </nav>
   </header>
