--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
   <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<link rel="stylesheet" href="homepagestyles.css">
+	<link rel="stylesheet" href="styles.css">
 	<title>Mock Page</title>
   </head>
   <body>
