--- a/form.html
+++ b/form.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="formstyles.css">
   <title>Price Inquiry</title>
 </head>
 <body>
-  <div class="div1">
+  <div class="grid-container">
+  <div class="item1">
+  <header>
     <div class="logo-one"></div>
     <div class="logo-two"></div>
     <a href="homepage.html">
@@ -24,13 +26,15 @@
       <a href="munchkin.html" id="munchkin">MUNCHKIN</a>
       <a href="form.html" id="price-inquiry">PRICE INQUIRY</a>
     </div>
+  </header>
   </div>
-  <div class="wrapper">
-    <header>
+  <div class="item2">
+  <main>
+    <div class="heading">
       <h1 id="title">Price Inquiry</h1>
       <p id="description">This is a price inquiry for our lastest creation, Munchkin. Munchkin is still in beta testing so prices may vary depending on the time this form has been submitted.</p>
-    </header>
-    <main>
+    </div>
+    <div class="content">
       <form id="survey-form">
         <div>
           <label id="name-label">Full Legal Name*</label>
@@ -120,6 +124,14 @@
         <button id="submit" type="submit">Submit</button>
       </div>
      </form>
-    </main>
+    </div>
+  </main>
   </div>
+  <div class="item3">
+  <footer>
+    <p>fjm</p>
+  </footer>
+  </div>
+  </div>
+</body>
 </body>
