--- a/homepage.html
+++ b/homepage.html
@@ -7,24 +7,27 @@
 	<title>Mock Page</title>
   </head>
   <body>
-	  <div class="div1">
-      <div class="logo-one"></div>
-      <div class="logo-two"></div>
-      <a href="homepage.html">
-        <h1>
-          <span class="homepage-r" >R</span>
-          <span class="homepage-m" >Munchkin</span>
-          <span class="homepage-o" >Olivia Inc.</span>
-        </h1>
-      </a>
-      <div class="search-bar">
-        <a href="about-us.html" id="about-us">ABOUT US</a>
-        <a href="specs.html" id="specs">SPECS</a>
-        <a href="features.html" id="features">FEATURES</a>
-        <a href="munchkin.html" id="munchkin">MUNCHKIN</a>
-	<a href="form.html" id="price-inquiry">PRICE INQUIRY</a>
-      </div>
-	  </div>
+	<div class="grid-container">
+  <div class="item1">
+  <header>
+    <div class="logo-one"></div>
+    <div class="logo-two"></div>
+    <a href="homepage.html">
+      <h1>
+        <span class="homepage-r-small" >R</span>
+        <span class="homepage-m" >Munchkin</span>
+        <span class="homepage-o" >Olivia Inc.</span>
+      </h1>
+    </a>
+    <div class="search-bar">
+      <a href="about-us.html" id="about-us">ABOUT US</a>
+      <a href="specs.html" id="specs">SPECS</a>
+      <a href="features.html" id="features">FEATURES</a>
+      <a href="munchkin.html" id="munchkin">MUNCHKIN</a>
+      <a href="form.html" id="price-inquiry">PRICE INQUIRY</a>
+    </div>
+  </header>
+  </div>
     <a href="homepage.html" id="r-button">R</a>
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
