--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
     <div class="logo-two"></div>
     <a href="homepage.html">
       <h1>
-        <span class="homepage-r-small" >R</span>
+        <span class="homepage-r" >R</span>
         <span class="homepage-m" >Munchkin</span>
         <span class="homepage-o" >Olivia Inc.</span>
       </h1>
