--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
 	<title>Mock Page</title>
   </head>
   <body>
+	<div class="div1">
 	<div class="grid-container">
   <div class="item1">
   <header>
@@ -27,6 +28,7 @@
       <a href="form.html" id="price-inquiry">PRICE INQUIRY</a>
     </div>
   </header>
+  </div>
   </div>
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
