--- a/homepage.html
+++ b/homepage.html
@@ -30,8 +30,10 @@
   </header>
   </div>
   </div>
+	<div class="item3">
 	<footer>
 		<p class="copyright">&#169; Olivia</p>
 	</footer>
+	</div>
   </body>
 </html>
