--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
     <div class="logo-one"></div>
     <div class="logo-two"></div>
     <a href="homepage.html">
-      <h1>
+      <h1 class="formh1">
         <span class="homepage-r-small" >R</span>
         <span class="homepage-m" >Munchkin</span>
         <span class="homepage-o" >Olivia Inc.</span>
