--- a/features.html
+++ b/features.html
@@ -30,6 +30,7 @@
   </header>
   </div>
   </div>
+<div class="item2">
   <main>
       <nav>
         <ul>
@@ -40,6 +41,7 @@
         </ul>
       </nav>
     </main>
+  </div>
 	  <div class="item3">
 	    <footer>
 		    <p class="copyright">&#169; Olivia</p>
