--- a/form.html
+++ b/form.html
@@ -121,7 +121,7 @@
   </div>
   <div class="item3">
   <footer>
-    <p>fjm</p>
+		<p class="copyright">&#169; Olivia</p>
   </footer>
   </div>
   </div>
