--- a/form.html
+++ b/form.html
@@ -50,12 +50,8 @@
             <input id="email" type="email" placeholder="Email" required/>
           </div>
         </div>
-        <div>
-          <label id="number-label">Version Wanted</label>
-          <input id="number" type="number" min="1" max="10" placeholder="1-10"/>
-        </div>
         <div class="price-range">
-          <label for="dropdown">Price Range</label>
+          <label for="dropdown">Price Range*</label>
           <select id="dropdown">
             <option>1,000-5,000</option>
             <option>5,000-10,000</option>
@@ -83,7 +79,7 @@
         <textarea placeholder="Include all alterations here" name="text"></textarea>
       </div>
       </div>
-      <label for="color">Favorite Color</label>
+      <label for="color">This is what the most updated version of Munchkin currently looks like.</label>
       <div>
         <input type="checkbox" value="Blue" name="color"/>
         <label for="Blue">Blue</label>
@@ -121,7 +117,7 @@
   </div>
   <div class="item3">
   <footer>
-		<p class="copyright">&#169; Olivia</p>
+    <p class="copyright">&#169; Olivia</p>
   </footer>
   </div>
   </div>
