--- a/form.html
+++ b/form.html
@@ -79,34 +79,20 @@
         <textarea placeholder="Include all alterations here" name="text"></textarea>
       </div>
       </div>
-      <label for="color">This is what the most updated version of Munchkin currently looks like.</label>
+      <label for="updated-image">This is what the most updated version of Munchkin currently looks like.</label>
+        <img src="images/munchkin.jpeg" alt="recent image of Munchkin">
+      <label for="agreement">By clicking I Agree you are agreeing to receiving future updates of Munchkin and any price changes.*</label>
       <div>
-        <input type="checkbox" value="Blue" name="color"/>
-        <label for="Blue">Blue</label>
+        <input type="checkbox" value="agree1" name="agree1"/>
+        <label for="agree1">I agree to receive text messages</label>
       </div>
       <div>
-        <input type="checkbox" value="Green" name="color"/>
-        <label for="Green">Green</label>
+        <input type="checkbox" value="agree2" name="agree2"/>
+        <label for="agree2">I agree to receive emails</label>
       </div>
       <div>
-        <input type="checkbox" value="Orange" name="color"/>
-        <label for="Orange">Orange</label>
-      </div>
-      <div>
-        <input type="checkbox" value="Purple" name="color"/>
-        <label for="Purple">Purple</label>
-      </div>
-      <div>
-        <input type="checkbox" value="Red" name="color"/>
-        <label for="Red">Red</label>
-      </div>
-      <div>
-        <input type="checkbox" value="White" name="color"/>
-        <label for="White">White</label>
-      </div>
-      <div>
-        <input type="checkbox" value="Yellow" name="color"/>
-        <label for="Yellow">Yellow</label>
+        <input type="checkbox" value="disagree" name="disagree"/>
+        <label for="disagree">I do not agree</label>
       </div>
       <div>
         <button id="submit" type="submit">Submit</button>
