--- a/form.html
+++ b/form.html
@@ -80,7 +80,7 @@
       </div>
       </div>
       <label for="updated-image">This is what the most updated version of Munchkin currently looks like.</label>
-        <img src="images/munchkin.jpeg" alt="recent image of Munchkin" id="upremunch">
+        <img src="images/munchkin.jpeg" alt="recent image of Munchkin" class="recentmunch">
       <label for="agreement">By clicking I Agree you are agreeing to receiving future updates of Munchkin and any price changes.*</label>
       <div>
         <input type="checkbox" value="agree1" name="agree1"/>
