--- a/features.html
+++ b/features.html
@@ -1,4 +1,4 @@
- <!doctype html>
+<!doctype html>
 <html lang="en-US">
   <head>
 	<meta charset="utf-8" />
@@ -9,43 +9,38 @@
   <body>
 	<div class="div1">
 	<div class="grid-container">
-  <div class="item1">
-  <header>
-    <div class="logo-one"></div>
-    <div class="logo-two"></div>
-    <a href="homepage.html">
-      <h1>
-        <span class="homepage-r" >R</span>
-        <span class="homepage-m">Munchkin</span>
-        <span class="homepage-o">Olivia Inc.</span>
-      </h1>
-    </a>
-    <div class="search-bar">
-      <a href="about-us.html" id="about-us">ABOUT US</a>
-      <a href="specs.html" id="specs">SPECS</a>
-      <a href="features.html" id="features">FEATURES</a>
-      <a href="munchkin.html" id="munchkin">MUNCHKIN</a>
-      <a href="form.html" id="price-inquiry">PRICE INQUIRY</a>
+    <div class="item1">
+    <header>
+        <div class="logo-one"></div>
+        <div class="logo-two"></div>
+        <a href="homepage.html">
+        <h1>
+            <span class="homepage-r" >R</span>
+            <span class="homepage-m" >Munchkin</span>
+            <span class="homepage-o" >Olivia Inc.</span>
+        </h1>
+        </a>
+        <div class="search-bar">
+            <a href="about-us.html" id="about-us">ABOUT US</a>
+            <a href="specs.html" id="specs">SPECS</a>
+            <a href="features.html" id="features">FEATURES</a>
+            <a href="munchkin.html" id="munchkin">MUNCHKIN</a>
+            <a href="form.html" id="price-inquiry">PRICE INQUIRY</a>
+        </div>
+    </header>
     </div>
-  </header>
-  </div>
-  </div>
+    </div>
 <div class="item2">
-  <main>
-      <nav>
-        <ul>
-          <li><a href="brain.jpeg">The Brain</a></li>
-          <li><a href="motor2.jpeg">One of Munchkins Motors</a></li>
-          <li><a href="munchkin_claw.jpeg">The Claw</a></li>
-          <li><a href="munchkin.jpeg">The Product</a></li>
-        </ul>
-      </nav>
-    </main>
-  </div>
+  <main class="featuresmain">
+    <div class="headiv">
+        <h1 class="featuresheader">FEATURES</h1>
+    </div>
+    <p class="featuresdes">Munchkin has many components that all play a part in how it works and how it moves.</p>
+  </main>
+</div>
 	  <div class="item3">
 	    <footer>
 		    <p class="copyright">&#169; Olivia</p>
 	    </footer>
 	  </div>
   </body>
-
