--- a/features.html
+++ b/features.html
@@ -30,13 +30,17 @@
     </header>
     </div>
     </div>
-<div class="item2">
-  <main class="featuresmain">
-    <div class="headiv">
-        <h1 class="featuresheader">FEATURES</h1>
-    </div>
-    <p class="featuresdes">Munchkin has many components that all play a part in how it works and how it moves.</p>
-  </main>
+    <div class="item2">
+    <main class="featuresmain">
+        <div class="headiv">
+            <h1 class="featuresheader">FEATURES</h1>
+        </div>
+        <p class="featuresdes1">Munchkin has many components that all play a part in how it works and how it moves. This section was designed to show and briefly explain what these features are.</p>
+        <p class="featuresdes2">Every feature has been specifically designed for its specific role. And has been improved via trial and error. We have actually managed to remove some features of Munchkin and combine others to make it take up less space and be less costy.</p>
+        <img src="images/brain.jpeg" alt="Power house of Munchkin" id="power-house">
+        <img src="images/motor2angle.jpeg" alt="motor that powers the crane" id="motor-crane">
+
+    </main>
 </div>
 	  <div class="item3">
 	    <footer>
