--- a/features.html
+++ b/features.html
@@ -39,7 +39,7 @@
         <p class="featuresdes2">Every feature has been specifically designed for its specific role. And has been improved via trial and error. We have actually managed to remove some features of Munchkin and combine others to make it take up less space and be less costy.</p>
         <img src="images/brain.jpeg" alt="Power house of Munchkin" id="power-house">
         <img src="images/motor2angle.jpeg" alt="motor that powers the crane" id="motor-crane">
-
+	<img src="images/sensor2.jpeg" alt="bottom sensor that detects objects" id="sensor-2">
     </main>
 </div>
 	  <div class="item3">
