--- a/features.html
+++ b/features.html
@@ -40,6 +40,10 @@
         <img src="images/brain.jpeg" alt="Power house of Munchkin" id="power-house">
         <img src="images/motor2angle.jpeg" alt="motor that powers the crane" id="motor-crane">
 	<img src="images/sensor2.jpeg" alt="bottom sensor that detects objects" id="sensor-2">
+	<div class="brain-house-des">
+            <p class="power-house-des">This is the power house of Munchkin. All the code that powers munchkin is in here.</p>
+            <p class="power-house-des2"></p>It is the most important feature.</p>
+        </div>
     </main>
 </div>
 	  <div class="item3">
