--- a/features.html
+++ b/features.html
@@ -39,11 +39,21 @@
         <p class="featuresdes2">Every feature has been specifically designed for its specific role. And has been improved via trial and error. We have actually managed to remove some features of Munchkin and combine others to make it take up less space and be less costy.</p>
         <img src="images/brain.jpeg" alt="Power house of Munchkin" id="power-house">
         <img src="images/motor2angle.jpeg" alt="motor that powers the crane" id="motor-crane">
-	<img src="images/sensor2.jpeg" alt="bottom sensor that detects objects" id="sensor-2">
-	<div class="brain-house-des">
+	      <img src="images/sensor2.jpeg" alt="bottom sensor that detects objects" id="sensor-2">
+	      <div class="brain-house-des">
             <p class="power-house-des">This is the power house of Munchkin. All the code that powers munchkin is in here.</p>
-            <p class="power-house-des2"></p>It is the most important feature.</p>
+            <p class="motor-crane1">This motor supplies power and is what controls the crane when it is in use.</p>
+            <p class="sensor-des1">This sensor detects objects directly in front of Munchkin.</p>
         </div>
+        <img src="images/munchkin_claw.jpeg" alt="Power house of Munchkin" id="munch-claw">
+        <img src="images/motor1angle.jpeg" alt="motor that powers the crane" id="motor-chain">
+	      <img src="images/sensor1.jpeg" alt="bottom sensor that detects objects" id="sensor-des2">
+	      <div class="brain-house-des1">
+            <p class="munch-claw">This is the claw that will pick up anything standing in front of it.</p>
+            <p class="motor-chain">This motor supplies power to the chains that rotate Munchkin.</p>
+            <p class="sensor-des2">This sensor detects objects below the crane.</p>
+        </div>
+        <p class="featuresdes3">Munchkin has many more features that are too many to list in one single page. For any questions or if further details are wanted please contact us in the about us page.*</p>
     </main>
 </div>
 	  <div class="item3">
